--- a/estudiantes/templates/estudiantes/anteproyecto/detalle.html
+++ b/estudiantes/templates/estudiantes/anteproyecto/detalle.html
@@ -4,24 +4,31 @@
 {% block title %}{{ anteproyecto.nombre_proyecto.capitalize }}{% endblock %}
 
 {% block content %}
-    <div class="row">
-        <div class="col-md-6 offset-md-3 col-sm-12">
-            <div class="card">
-                <div class="card-header">{{ anteproyecto.nombre_proyecto }}</div>
-                <div class="card-body">
-                    <p class="card-text">{{ anteproyecto.resumen|safe }}</p>
-                    <hr>
-                    <p class="card-text"><a href="{{ anteproyecto.archivo }}" class="btn btn-outline-primary"><span
-                            class="fa fa-file"></span> Archivo</a></p>
-                </div>
-                <div class="card-footer text-right">
-                    <div class="btn-group">
-                        <a class="btn btn-outline-info" href="{% url 'estudiante:editar-anteproyecto' anteproyecto.pk %}"><span class="fa fa-edit"></span> Editar</a>
-                        <a class="btn btn-outline-success"><span class="fa fa-check"></span> Aprobar</a>
-                        <a class="btn btn-outline-danger"><span class="fa fa-eraser"></span> Rechazar</a>
-                    </div>
+<div class="row">
+    <div class="col-md-6 offset-md-3 col-sm-12">
+        <div class="card">
+            <div class="card-header">{{ anteproyecto.nombre_proyecto }}</div>
+            <div class="card-body">
+                <ul class="list-group">
+                    {% for estudiante in anteproyecto.estudiantes %}
+                    <li class="list-group-item">{{ estudiante }}</li>
+                    {% endfor %}
+                </ul>
+                <p class="card-text">{{ anteproyecto.resumen|safe }}</p>
+                <hr>
+                <p class="card-text"><a href="{{ anteproyecto.archivo }}" class="btn btn-outline-primary"><span
+                        class="fa fa-file"></span> Archivo</a></p>
+            </div>
+            <div class="card-footer text-right">
+                <div class="btn-group">
+                    <a class="btn btn-outline-info"
+                       href="{% url 'estudiante:editar-anteproyecto' anteproyecto.pk %}"><span
+                            class="fa fa-edit"></span> Editar</a>
+                    <a class="btn btn-outline-success"><span class="fa fa-check"></span> Aprobar</a>
+                    <a class="btn btn-outline-danger"><span class="fa fa-eraser"></span> Rechazar</a>
                 </div>
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
