Arreglar plantillas de listado de anteproyecto.

--- a/estudiantes/templates/estudiantes/anteproyecto/lista.html
+++ b/estudiantes/templates/estudiantes/anteproyecto/lista.html
@@ -32,7 +32,7 @@
                         {% if anteproyectos %}
                             {% include 'estudiantes/anteproyecto/include/tabla.html' %}
                         {% else %}
-                            <div class="alert alert-info text-center">No hay anteproyectos pendientes</div>
+                            <div class="alert alert-info text-center">No hay anteproyectos registrados</div>
                         {% endif %}
                     </div>
                 </div>
