--- a/estudiantes/templates/estudiantes/anteproyecto/crear.html
+++ b/estudiantes/templates/estudiantes/anteproyecto/crear.html
@@ -8,7 +8,7 @@
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">Registrar Anteproyecto</h4>
-                <form method="post">
+                <form method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ form.as_p }}
                     <button type="submit" class="btn btn-primary">Guardar</button>
