--- a/estudiantes/templates/estudiantes/anteproyecto/include/tabla.html
+++ b/estudiantes/templates/estudiantes/anteproyecto/include/tabla.html
@@ -17,7 +17,7 @@
                         {# Ver #}<a class="btn btn-outline-info" href="{{ anteproyecto.get_absolute_url }}"> Ver</a>
                         {# Editar #}<a class="btn btn-outline-info"
                                        href="{% url 'estudiante:editar-anteproyecto' anteproyecto.pk %}"> Editar</a>
-                        {# Rechazar #}<a href=# class="btn btn-outline-danger"> Rechazar</a>
+                        {# Rechazar #}<a href="" class="btn btn-outline-danger"> Rechazar</a>
                         {# Aprobar #}<a href="#" class="btn btn-outline-success">Aprobar</a>
                     </div>
                 </td>
