Ajustar plantilla de creacion de anteproyectos.

--- a/estudiantes/templates/estudiantes/anteproyecto/crear.html
+++ b/estudiantes/templates/estudiantes/anteproyecto/crear.html
@@ -11,7 +11,7 @@
                 <form method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ form.as_p }}
-                    <button type="submit" class="btn btn-primary">Guardar</button>
+                    <button type="submit" class="btn btn-primary btn-lg">Guardar</button>
                 </form>
             </div>
         </div>
@@ -59,6 +59,7 @@
         tinymce.init({
             selector: '#id_resumen',
         });
+
     });
 </script>
 {% endblock %}
