--- a/templates/index.html
+++ b/templates/index.html
@@ -4,4 +4,4 @@
 
 {% block jumbotron-title %}Bienvenido al sistema SIGIA{% endblock %}
 {% block jumbotron-subtitle %}Sistema para la gestion de informacion academica y administrativa {% endblock %}
-{% block jumbotron-content %}En este sistema...{% endblock %}
+{% block jumbotron-content %}{% endblock %}
