--- a/core/static/core/css/custom.css
+++ b/core/static/core/css/custom.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    background-image: url("/static/img/textured_paper.png");
+    background-image: url("../img/textured_paper.png");
     background-repeat: repeat;
     background-color: #cccccc;
     padding-top: 4.5rem;
