--- a/ubicacion/templates/ubicacion/sede_detail.html
+++ b/ubicacion/templates/ubicacion/sede_detail.html
@@ -146,6 +146,8 @@
         };
 
         var personasctx = document.getElementById('personasChart');
+        // personasctx.height = 10;
+        // personasctx.width = 10; 
 
         var estData = '';
         var profData = '';
