--- a/templates/includes/header/partial_accounts_dropdown.html
+++ b/templates/includes/header/partial_accounts_dropdown.html
@@ -12,7 +12,7 @@
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="{% url 'perfil:editar' %}">Editar Perfil</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Notificaciones</a>
+        <a class="dropdown-item" href="#"><i class="fas fa-ban"></i> Notificaciones</a>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="{% url 'solicitud:propias' %}">Solicitudes</a>
         <div class="dropdown-divider"></div>
