Actualizacion de scripts de carga masiva.

--- a/ubicacion/templates/ubicacion/sede_detail.html
+++ b/ubicacion/templates/ubicacion/sede_detail.html
@@ -257,7 +257,14 @@
                             title: {
                                 display: true,
                                 text: 'Relacion Estudiantes/Profesor por Facultad'
-                            }
+                            },
+                            scales: {
+                                yAxes: [{
+                                    ticks: {
+                                        beginAtZero: true
+                                        }
+                                        }]
+                                        }
                         }
                     });
                 }
