--- a/inventario/templates/inventario/fabricante/lista.html
+++ b/inventario/templates/inventario/fabricante/lista.html
@@ -11,14 +11,16 @@
 
 {% block content %}
     <div class="row">
-        <div class="col-sm-12 col-md-6 offset-md-3">
+        <div class="col-12">
             <div class="card">
-                <div class="card-body">
-                    <p class="card-text">
+                {% if perms.inventario.add_fabricante %}
+                <div class="card-header">    <p class="card-text">
                         <a href="{% url 'inventario:crear-fabricante' %}"
-                           class="btn btn-sm btn-primary"><i class="fa fa-edit"></i> Registrar</a>
-                    </p>
+                           class="btn btn-sm btn-primary"><i class="fa fa-edit"></i> Registrar</a></p></div>
+                {% endif %}
+                <div class="card-body">
                     <h4 class="card-title">Listado de Fabricantes</h4>
+                    <hr />
                     <table class="table" id="enhance">
                         {% if fabricantes %}
                             <thead>
