--- a/estudiantes/templates/estudiantes/anteproyecto/pendiente.html
+++ b/estudiantes/templates/estudiantes/anteproyecto/pendiente.html
@@ -24,7 +24,7 @@
 
 
 <div class="row">
-    <div class="col-md-8 offset-md-2 col-sm-12">
+    <div class="col-md-12 col-sm-12">
         <div class="card">
             <div class="card-body">
                 <div class="card-title"><h4>Anteproyectos Pendientes</h4>
