--- a/inventario/templates/inventario/categoria/lista.html
+++ b/inventario/templates/inventario/categoria/lista.html
@@ -11,14 +11,18 @@
 
 {% block content %}
     <div class="row">
-        <div class="col-sm-12 col-md-6 offset-md-3">
+        <div class="col-12">
             <div class="card">
+                    {% if perms.inventario.add_categoria %}
+                    <div class="card-header"><p class="card-text">
+                            <a href="{% url 'inventario:crear-categoria' %}"
+                               class="btn btn-sm btn-primary"><i class="fa fa-edit"></i> Registrar</a>
+                        </p></div>
+                    {% endif %}
                 <div class="card-body">
-                    <p class="card-text">
-                        <a href="{% url 'inventario:crear-categoria' %}"
-                           class="btn btn-sm btn-primary"><i class="fa fa-edit"></i> Registrar</a>
-                    </p>
+                    
                     <h4 class="card-title">Listado de Categorias</h4>
+                    {% if categorias %}
                     <table class="table" id="enhance">
                         <thead>
                         <tr>
@@ -26,7 +30,7 @@
                             <th>Opciones</th>
                         </tr>
                         </thead>
-                        {% if categorias %}
+                        
                             <tbody>
                             {% for categoria in categorias %}
                                 <tr>
