Implementar Trabajo de Graduacion Unique

--- a/estudiantes/templates/estudiantes/consultar.html
+++ b/estudiantes/templates/estudiantes/consultar.html
@@ -6,8 +6,20 @@
 {% endblock %}
 
 
-{% block title %}Consultar - Estudiante{% endblock %}
+{% block title %}Consultar Estudiante{% endblock %}
 {% block content %}
+    <div class="row">
+        <div class="col-12">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="{% url 'core:index' %}">Inicio</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Estudiantes
+                    </li>
+                </ol>
+            </nav>
+        </div>
+    </div>
+
     <div class="row top-buffer">
         <div class="col-md-12">
             <div class="card">
