--- a/estudiantes/templates/estudiantes/trabajos/pendiente.html
+++ b/estudiantes/templates/estudiantes/trabajos/pendiente.html
@@ -9,11 +9,11 @@
 {% block content %}
 
     <div class="row">
-        <div class="col-md-8 offset-md-2">
+        <div class="col-12">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="{% url 'core:index' %}">Inicio</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Proyectos de Trabajo de Graduacion
+                    <li class="breadcrumb-item active" aria-current="page">Trabajos de Graduacion Pendientes
                     </li>
                 </ol>
             </nav>
@@ -22,20 +22,17 @@
 
 
     <div class="row">
-    <div class="col-md-8 offset-md-2 col-sm-12">
+    <div class="col-12">
         <div class="card">
             <div class="card-body">
                 <div class="card-title"><h4>Proyectos de Graduacion</h4>
-
                     <hr/>
                     <div class="card-text">
-                        <p><a class="btn btn-outline-primary" href="{% url 'estudiante:crear-proyecto' %}">Registrar
-                            Proyecto</a></p>
                         {% if proyectos %}
-                            {% include 'estudiantes/proyecto/../trabajos/include/tabla.html' %}
+                            {% include 'estudiantes/proyecto/include/tabla.html' %}
                         {% else %}
                             <div class="alert alert-info" role="alert">
-                                No hay proyectos registrados
+                                No hay trabajos pendientes
                             </div>
                         {% endif %}
                     </div>
