--- a/perfiles/templates/perfiles/consulta.html
+++ b/perfiles/templates/perfiles/consulta.html
@@ -5,48 +5,60 @@
     <link href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.min.css" rel="stylesheet">
 {% endblock %}
 
-{% block title %}Consultar - Profesores{% endblock %}
+{% block title %}Consultar Profesores{% endblock %}
 {% block content %}
+    <div class="row">
+        <div class="col-12">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="{% url 'core:index' %}">Inicio</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Profesores</li>
+                </ol>
+            </nav>
+        </div>
+    </div>
+
     <div class="row">
         <div class="col-md-12">
             <div class="card">
                 <div class="card-body">
                     <h4 class="card-title">Listado de Profesores</h4>
 
-{#                    {% if perfiles %}#}
-                        <div class="table-responsive">
-                            <table class="table" id="profesores">
-                                <thead>
+                    {#                    {% if perfiles %}#}
+                    <div class="table-responsive">
+                        <table class="table" id="profesores">
+                            <thead>
+                            <tr>
+                                <th>Nombre</th>
+                                <th>Codigo</th>
+                                <th>Departamento</th>
+                                <th>Nivel Academico</th>
+                                <th>Opciones</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for perfil in perfiles %}
                                 <tr>
-                                    <th>Nombre</th>
-                                    <th>Codigo</th>
-                                    <th>Departamento</th>
-                                    <th>Nivel Academico</th>
-                                    <th>Opciones</th>
+                                    <td>{{ perfil.primer_nombre }} {{ perfil.primer_apellido }}</td>
+                                    <td>{{ perfil.codigo }}</td>
+                                    <td>{{ perfil.departamento }}</td>
+                                    <td>{{ perfil.nivel_academico }}</td>
+                                    <td>
+                                        <div class="btn-group">
+                                            <a class="btn btn-outline-info" href="{{ perfil.get_absolute_url }}">
+                                                Ver</a>
+                                        </div>
+                                    </td>
                                 </tr>
-                                </thead>
-                                <tbody>
-                                {% for perfil in perfiles %}
-                                    <tr>
-                                        <td>{{ perfil.primer_nombre }} {{ perfil.primer_apellido }}</td>
-                                        <td>{{ perfil.codigo }}</td>
-                                        <td>{{ perfil.departamento }}</td>
-                                        <td>{{ perfil.nivel_academico }}</td>
-                                        <td>
-                                            <div class="btn-group">
-                                                <a class="btn btn-outline-info" href="{{ perfil.get_absolute_url }}"> Ver</a>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                {% endfor %}
-                                </tbody>
-                            </table>
-                        </div>
-{#                    {% else %}#}
-{#                        <div class="alert alert-info" role="alert">#}
-{#                            No hay profesores registrados en su facultad.#}
-{#                        </div>#}
-{#                    {% endif %}#}
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                    {#                    {% else %}#}
+                    {#                        <div class="alert alert-info" role="alert">#}
+                    {#                            No hay profesores registrados en su facultad.#}
+                    {#                        </div>#}
+                    {#                    {% endif %}#}
 
                 </div>
             </div>
