--- a/templates/includes/header/partial_escuela_dropdown.html
+++ b/templates/includes/header/partial_escuela_dropdown.html
@@ -17,19 +17,11 @@
                     <span
                             class="badge badge-pill badge-primary">{{ request.user.perfil.escuela.estudiantes.count }}</span></a>
             {% endif %}
-
-            {% if perms.estudiantes.add_anteproyecto %}
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item"
-                   href="{% url 'estudiante:anteproyecto-escuela' request.user.perfil.escuela.pk %}">Anteproyectos <span
-                        class="badge badge-pill badge-primary">{{ request.user.perfil.escuela.anteproyectos.all.count }}</span></a>
-            {% endif %}
-
             {% if perms.estudiantes.add_proyecto %}
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="{% url 'estudiante:proyecto-escuela' request.user.perfil.escuela.pk %}">Proyectos
+                <a class="dropdown-item" href="{% url 'estudiante:trabajo-escuela' request.user.perfil.escuela.pk %}">Trabajos de Graduacion
                     <span
-                            class="badge badge-pill badge-primary">{{ request.user.perfil.escuela.proyectos.count }}</span></a>
+                            class="badge badge-pill badge-primary">{{ request.user.perfil.escuela.trabajos_graduacion.count }}</span></a>
             {% endif %}
         </div>
     {% endif %}
